[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "litmap"
version = "0.1.0"
description = "Research literature knowledge graph — arXiv ingest and local query"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "nibir-ai", email = "nibir.github@gmail.com"},
]
keywords = ["arxiv", "research", "knowledge-graph", "nlp"]
dependencies = [
  "requests>=2.31.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.28.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
]

[project.scripts]
litmap = "litmap.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["litmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
